# ML-audio-processing-app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
TrainingTest_Data/Set1/: S_10_g.m4a  S_11_g.m4a  S_12_g.m4a  S_13_g.m4a  S_14_g.m4a  S_15_b.m4a  S_16_g.m4a  S_17_b.m4a  S_18_g.m4a  S_19_b.m4a  S_1_g.m4a  S_20_g.m4a  S_21_b.m4a  S_22_g.m4a  S_23_g.m4a  S_24_b.m4a  S_25_g.m4a  S_26_g.m4a  S_27_g.m4a  S_2_b.m4a  S_3_g.m4a  S_4_b.m4a  S_5_g.m4a  S_6_g.m4a  S_7_g.m4a  S_8_b.m4a  S_9_g.m4a
TrainingTest_Data/Set2/: S_10_g.m4a  S_11_g.m4a  S_12_g.m4a  S_13_g.m4a  S_14_g.m4a  S_15_b.m4a  S_16_g.m4a  S_17_b.m4a  S_18_g.m4a  S_19_b.m4a  S_1_g.m4a  S_20_g.m4a  S_21_b.m4a  S_22_g.m4a  S_23_g.m4a  S_24_b.m4a  S_25_g.m4a  S_26_g.m4a  S_27_g.m4a  S_2_b.m4a  S_3_g.m4a  S_4_b.m4a  S_5_g.m4a  S_6_g.m4a  S_7_g.m4a  S_8_b.m4a  S_9_g.m4a
TrainingTest_Data/Set3/: S_10_g.m4a  S_11_g.m4a  S_12_g.m4a  S_13_g.m4a  S_14_g.m4a  S_15_b.m4a  S_16_g.m4a  S_17_b.m4a  S_18_g.m4a  S_19_b.m4a  S_1_g.m4a  S_20_g.m4a  S_21_b.m4a  S_22_g.m4a  S_23_g.m4a  (+12 more)
Validation_Data/: S_10_g.m4a  S_11_g.m4a  S_12_g.m4a  S_13_g.m4a  S_14_g.m4a  S_15_b.m4a  S_16_g.m4a  S_17_b.m4a  S_18_g.m4a  S_19_b.m4a  S_1_g.m4a  S_20_g.m4a  S_21_b.m4a  S_22_g.m4a  S_23_g.m4a  S_24_b.m4a  S_25_g.m4a  S_26_g.m4a  S_27_g.m4a  S_2_b.m4a  S_3_g.m4a  S_4_b.m4a  S_5_g.m4a  S_6_g.m4a  S_7_g.m4a  S_8_b.m4a  S_9_g.m4a
assets/: file_upload.js  processing_callbacks.js  recorder.js  styles.css
ml_audio_app/: __init__.py  callbacks.py  config.py  layout.py  pipeline.py  plots.py  storage.py  ui_helpers.py  workflow.py
(+55 files in other folders)
