[project]
name = "ml-audio-processing-app"
version = "0.1.0"
description = "Dash web app for audio recording, preprocessing, training, and analysis."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dash>=2.18",
    "imageio-ffmpeg>=0.5",
    "joblib>=1.4",
    "librosa>=0.10",
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=5.24",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "soundfile>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_audio_app"]
